components/envoy-gateway/configs/base/gateway.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: platform-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: cluster-gateway
  listeners:
    - name: vault-http
      protocol: HTTP
      port: 80
      hostname: vault.blackquartz.io
